Replaced flags with coin animation. Introduced toxic gas in gui.

--- a/tank_game_gui/src/application.qrc
+++ b/tank_game_gui/src/application.qrc
@@ -8,7 +8,8 @@
      <file>../images/mine.png</file>
      <file>../images/obstacle.jpg</file>
      <file>../images/missile.png</file>
-     <file>../images/flag.png</file>
+     <file>../images/poison.png</file>
+     <file>../images/coin_sheet.png</file>
      <file>../images/tank_fire_sheet.png</file>
      <file>../images/explosion_sheet.png</file>
      <file>../images/ball_grey.png</file>
