Added elapsed time and game number to statusbar in gui.

--- a/tank_game_gui/src/mainwindow.ui
+++ b/tank_game_gui/src/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Consoden Tank battle</string>
+   <string>Consoden Winter Games 2015</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
