--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -6,6 +6,8 @@
      <file>../images/panzerIV_wreck.png</file>
      <file>../images/clay.png</file>
      <file>../images/mine.png</file>
+     <file>../images/tiny-tux.png</file>
+     <file>../images/tux-anim.png</file>
      <file>../images/obstacle.jpg</file>
      <file>../images/missile.png</file>
      <file>../images/poison.png</file>
