--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -7,6 +7,7 @@
      <file>../images/clay.png</file>
      <file>../images/mine.png</file>
      <file>../images/tiny-tux.png</file>
+     <file>../images/dead-tux.png</file>
      <file>../images/tux-anim.png</file>
      <file>../images/obstacle.jpg</file>
      <file>../images/missile.png</file>
