da penguin is animated <3

--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -8,6 +8,7 @@
      <file>../images/mine.png</file>
      <file>../images/tiny-tux.png</file>
      <file>../images/dead-tux.png</file>
+     <file>../images/animated-dead-tux.png</file>
      <file>../images/tux-anim.png</file>
      <file>../images/obstacle.jpg</file>
      <file>../images/missile.png</file>
