--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -19,6 +19,10 @@
      <file>../images/ball_grey.png</file>
      <file>../images/ball_red.png</file>
      <file>../images/ball_blue.png</file>
+     <file>../images/inactive-blue.png</file>
+     <file>../images/active-blue.png</file>
+     <file>../images/inactive-green.png</file>
+     <file>../images/active-green.png</file>    
  </qresource>  
  </RCC>
 
