--- a/src/tank_game_gui/src/tankinfowidget.ui
+++ b/src/tank_game_gui/src/tankinfowidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>150</width>
-    <height>400</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>150</width>
-    <height>400</height>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>150</width>
-    <height>400</height>
+    <height>500</height>
    </size>
   </property>
   <property name="font">
@@ -47,7 +47,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-green.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="towerUp">
@@ -63,7 +63,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-green.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -78,7 +78,9 @@
    <property name="font">
     <font>
      <pointsize>10</pointsize>
+     <weight>75</weight>
      <italic>false</italic>
+     <bold>true</bold>
      <kerning>false</kerning>
     </font>
    </property>
@@ -102,7 +104,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-green.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="moveLeft">
@@ -118,7 +120,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-green.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="fireButton">
@@ -134,7 +136,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-blue.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -149,7 +151,9 @@
    <property name="font">
     <font>
      <pointsize>10</pointsize>
+     <weight>75</weight>
      <italic>false</italic>
+     <bold>true</bold>
      <kerning>false</kerning>
     </font>
    </property>
@@ -173,7 +177,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-green.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="moveRight">
@@ -189,7 +193,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-green.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="towerLeft">
@@ -205,7 +209,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-green.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="moveDown">
@@ -221,7 +225,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../images/ball_grey.gif</pixmap>
+    <pixmap>../images/inactive-green.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="playerName">
@@ -267,14 +271,109 @@
     <bool>false</bool>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: grey;
-color: yellow</string>
+    <string notr="true">background-color: rgb(67, 67, 60);
+color: rgb(90, 230, 10);</string>
    </property>
    <property name="digitCount">
     <number>3</number>
    </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
+   </property>
    <property name="intValue" stdset="0">
     <number>0</number>
+   </property>
+  </widget>
+  <widget class="QLCDNumber" name="laserLcdNumber">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>405</y>
+     <width>51</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(67, 67, 60);
+color: rgb(90, 230, 10);</string>
+   </property>
+   <property name="digitCount">
+    <number>2</number>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
+   </property>
+   <property name="intValue" stdset="0">
+    <number>0</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>385</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
+     <kerning>false</kerning>
+    </font>
+   </property>
+   <property name="text">
+    <string>Lasers</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="fireButton_2">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>410</y>
+     <width>31</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../images/inactive-blue.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>60</y>
+     <width>111</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
+     <kerning>false</kerning>
+    </font>
+   </property>
+   <property name="text">
+    <string>Score</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
