THERE ARE HALF ASSED LASERSgit statusgit status

--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -23,7 +23,9 @@
      <file>../images/active-blue.png</file>
      <file>../images/inactive-green.png</file>
      <file>../images/active-green.png</file>
-     <file>../images/laser-ammo.png</file>        
+     <file>../images/laser-ammo.png</file>
+     <file>../images/laser-start.png</file>
+     <file>../images/laser-middle.png</file>              
  </qresource>  
  </RCC>
 
