--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -25,7 +25,9 @@
      <file>../images/laser-ammo.png</file>
      <file>../images/laser-start.png</file>
      <file>../images/laser-middle.png</file>
-     <file>../images/awesome-explosion.png</file>                          
+     <file>../images/awesome-explosion.png</file>        
+     <file>../images/cool_flame.png</file>
+                       
  </qresource>  
  </RCC>
 
