--- a/src/tank_game_gui/src/tankinfowidget.ui
+++ b/src/tank_game_gui/src/tankinfowidget.ui
@@ -2,14 +2,6 @@
 <ui version="4.0">
  <class>TankInfoWidget</class>
  <widget class="QWidget" name="TankInfoWidget">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>150</width>
-    <height>500</height>
-   </rect>
-  </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
     <horstretch>0</horstretch>
@@ -19,13 +11,13 @@
   <property name="minimumSize">
    <size>
     <width>150</width>
-    <height>500</height>
+    <height>520</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>150</width>
-    <height>500</height>
+    <height>520</height>
    </size>
   </property>
   <property name="font">
@@ -287,10 +279,10 @@ color: rgb(90, 230, 10);</string>
   <widget class="QLCDNumber" name="laserLcdNumber">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>405</y>
+     <x>10</x>
+     <y>410</y>
      <width>51</width>
-     <height>41</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="autoFillBackground">
@@ -313,8 +305,8 @@ color: rgb(90, 230, 10);</string>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>385</y>
+     <x>50</x>
+     <y>390</y>
      <width>51</width>
      <height>20</height>
     </rect>
@@ -374,6 +366,73 @@ color: rgb(90, 230, 10);</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>460</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
+     <kerning>false</kerning>
+    </font>
+   </property>
+   <property name="text">
+    <string>Smoke</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLCDNumber" name="smokeLcd">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>480</y>
+     <width>51</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(67, 67, 60);
+color: rgb(90, 230, 10);</string>
+   </property>
+   <property name="digitCount">
+    <number>2</number>
+   </property>
+   <property name="segmentStyle">
+    <enum>QLCDNumber::Flat</enum>
+   </property>
+   <property name="intValue" stdset="0">
+    <number>0</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="smokeAvailiable">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>480</y>
+     <width>31</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../images/inactive-blue.png</pixmap>
    </property>
   </widget>
  </widget>
