We have a slightly working redeemer :)

--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -22,7 +22,8 @@
      <file>../images/awesome-explosion.png</file>         
      <file>../images/cool_flame.png</file>
      <file>../images/smoke_grenade.png</file>
-     <file>../images/big-smoke.png</file>          
+     <file>../images/big-smoke.png</file>
+     <file>../images/redeemer.png</file>                      
      
                        
  </qresource>  
