added redeemer ammo to board

--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -23,7 +23,8 @@
      <file>../images/cool_flame.png</file>
      <file>../images/smoke_grenade.png</file>
      <file>../images/big-smoke.png</file>
-     <file>../images/redeemer.png</file>                      
+     <file>../images/redeemer.png</file>
+     <file>../images/redeemer-ammo.png</file>                           
      
                        
  </qresource>  
