changed the wall sprite... oh yhea that right.. and i fixed abug 'cause im a thug
cleanup

--- a/src/tank_game_gui/src/application.qrc
+++ b/src/tank_game_gui/src/application.qrc
@@ -7,8 +7,8 @@
      <file>../images/clay.png</file>
      <file>../images/mine.png</file>
      <file>../images/animated-dead-tux.png</file>
-     <file>../images/tux-anim.png</file>
-     <file>../images/obstacle.jpg</file>
+     <file>../images/tux-anim.png</file>    
+     <file>../images/obstacle.png</file>
      <file>../images/missile.png</file>
      <file>../images/poison.png</file>
      <file>../images/coin_sheet.png</file>
